parcel and script commands added

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "modern-js-modules-tooling",
   "version": "1.0.0",
   "description": "",
-  "main": "clean.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
     "leaflet": "^1.8.0",
     "live-server": "^1.1.0",
     "lodash-es": "^4.17.21"
+  },
+  "devDependencies": {
+    "parcel": "^2.7.0"
   }
 }
