--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/dev-chandershekhar/modules-in-js#readme",
   "dependencies": {
+    "core-js": "^3.25.0",
     "leaflet": "^1.8.0",
     "live-server": "^1.1.0",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "parcel": "^2.7.0"
